# FSDS

./: .gitignore  Dockerfile  README.md  drift.txt  env.yml  main.py  pyproject.toml
.github/workflows/: Formatting.yml  build_pull_image.yml  ci.yml  docker_run.yml
dataflow/: dataflowtesttransform.json  dataflowtraintansform.json
dataset/: DelimitedText1.json  DelimitedText2.json  DelimitedText3.json  DelimitedText4.json  DelimitedText5.json  DelimitedText6.json  DelimitedText7.json
datasets/models/: linear_regression_model.pkl
factory/: fsdsADF.json
linkedService/: AzureDataLakeStorageLink.json  LinkedSericeGit.json  LinkedServiceGitTest.json
mlruns/.trash/796977116200380140/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/2476c181b54749888d5307fedc5aed26/: meta.yaml
mlruns/0/4d690c5b0d174bf4924b46297b2773ec/: meta.yaml
mlruns/0/78933850aab1422798e572287fc90e65/: meta.yaml
mlruns/234512808014410394/: meta.yaml
mlruns/234512808014410394/0c9c6bd5fa1b4348a5f3ef8c092f208e/: meta.yaml
mlruns/235389369716380414/: meta.yaml
mlruns/854353196212353623/: meta.yaml
monitoring/: report.html  report.json
outputs/data/: Train_Transform.csv  current_data.csv  reference_data.csv
pipeline/: pipelineETL.json
scripts/: add_predict.py  ingest_data.py  monitor.py  score.py  train.py
src/FSDS_/: __init__.py  feature.py  ingest.py  main.py  raw.py  score.py  train.py
src/fsds.egg-info/: PKG-INFO
tests/functional_tests/: test_installation.py
tests/unit_tests/: test_ingestion.py  test_score.py  test_train.py
trigger/: triggerETL.json
(+86 files in other folders)
